--- a/spring-boot-validating-form-input/src/main/resources/application.properties
+++ b/spring-boot-validating-form-input/src/main/resources/application.properties
@@ -1,2 +1,13 @@
+## 配置数据库
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+# Specify the DBMS
+spring.jpa.database = MYSQL
 ## 是否显示 SQL 语句
 spring.jpa.show-sql=true
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+##配置模板引擎
+spring.thymeleaf.prefix=classpath:/templates/
