--- a/springboot-freemarker/src/main/resources/application.properties
+++ b/springboot-freemarker/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 ## Mybatis ≈‰÷√
-mybatis.typeAliasesPackage=org.spring.springboot.domain
+mybatis.typeAliasesPackage=com.shensha.demo.entity
 mybatis.mapperLocations=classpath:mapper/*.xml
 
 ## Freemarker ≈‰÷√
