--- a/springboot-cache-redis/src/main/resources/application.properties
+++ b/springboot-cache-redis/src/main/resources/application.properties
@@ -1,26 +1,26 @@
-## ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½İ¿ï¿½
+## ÅäÖÃÊı¾İ¿â
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
-## ï¿½Ç·ï¿½ï¿½ï¿½Ê¾ SQL ï¿½ï¿½ï¿½
+## ÊÇ·ñÏÔÊ¾ SQL Óï¾ä
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
 
-##ï¿½ï¿½ï¿½ï¿½Ä£ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+##ÅäÖÃÄ£°åÒıÇæ
 spring.thymeleaf.prefix=classpath:/templates/
 
-## DATA WEB ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ {@link SpringDataWebProperties}
-## ï¿½ï¿½Ò³ï¿½ï¿½Ğ¡ Ä¬ï¿½ï¿½Îª 20
+## DATA WEB Ïà¹ØÅäÖÃ {@link SpringDataWebProperties}
+## ·ÖÒ³´óĞ¡ Ä¬ÈÏÎª 20
 spring.data.web.pageable.default-page-size=3
-## ï¿½ï¿½Ç°Ò³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ Ä¬ï¿½ï¿½Îª page
+## µ±Ç°Ò³²ÎÊıÃû Ä¬ÈÏÎª page
 spring.data.web.pageable.page-parameter=pageNumber
-## ï¿½ï¿½Ç°Ò³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ Ä¬ï¿½ï¿½Îª size
+## µ±Ç°Ò³²ÎÊıÃû Ä¬ÈÏÎª size
 spring.data.web.pageable.size-parameter=pageSize
-## ï¿½Ö¶ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ Ä¬ï¿½ï¿½Îª sort
+## ×Ö¶ÎÅÅĞò²ÎÊıÃû Ä¬ÈÏÎª sort
 spring.data.web.sort.sort-parameter=orderBy
 
 spring.redis.host=localhost
