--- a/springboot-elasticsearch/pom.xml
+++ b/springboot-elasticsearch/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
-            <version>1.4.3.RELEASE</version>
+            <version>2.0.4.RELEASE</version>
         </dependency>
 
 
@@ -58,6 +58,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.lucene</groupId>-->
+            <!--<artifactId>lucene-core</artifactId>-->
+            <!--<version>6.0.1</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
