--- a/springboot-mybatis/pom.xml
+++ b/springboot-mybatis/pom.xml
@@ -54,6 +54,13 @@
             <artifactId>mysql-connector-java</artifactId>
             <!--<version>${mysql-connector}</version>-->
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-redis</artifactId>
+            <version>1.4.7.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
