--- a/springboot-mybatis/src/main/resources/application.properties
+++ b/springboot-mybatis/src/main/resources/application.properties
@@ -1,9 +1,24 @@
-## 数据源配置
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8
+## 配置数据库
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+# Specify the DBMS
+spring.jpa.database = MYSQL
 
 ## Mybatis 配置
-mybatis.typeAliasesPackage=com.shensha.springbootmybatis.entity
+mybatis.typeAliasesPackage=com.shensha.demo.entity
 mybatis.mapperLocations=classpath:mapper/*.xml
+
+## 是否显示 SQL 语句
+spring.jpa.show-sql=true
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+
+spring.redis.host=localhost
+spring.redis.password=123
+spring.redis.port=6379
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.min-idle=0
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-wait=-1
