--- a/springboot-mailsender/src/main/resources/application.properties
+++ b/springboot-mailsender/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mail.host=smtp.qq.com
-spring.mail.username=995892159@qq.com
-spring.mail.password=jpomykpdnuclbfhj
+spring.mail.username=xx
+spring.mail.password=xxß
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
