--- a/springboot-mybatis-mutil-datasource/pom.xml
+++ b/springboot-mybatis-mutil-datasource/pom.xml
@@ -67,6 +67,10 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
